# saphyr

./: .gitignore  Cargo.toml  README.md  integrate.sh
.github/workflows/: ci.yml  miri.yml
bench/: Cargo.toml
bench/tools/bench_compare/: Cargo.toml
bench/tools/bench_compare/src/: main.rs
bench/tools/gen_large_yaml/: Cargo.toml
bench/tools/gen_large_yaml/src/: main.rs  nested.rs
fuzz/: Cargo.toml
parser/: CHANGELOG.md  Cargo.toml  README.md
parser/parser/tests/: test_parser_stack.rs
parser/src/: char_traits.rs  debug.rs  input.rs  lib.rs  parser.rs  parser_stack.rs  scanner.rs
parser/src/input/: buffered.rs  str.rs
parser/tests/: basic.rs  block_scalar_indentation.rs  block_scalar_keep.rs  borrowed_cow.rs  closing_bracket.rs  comment_intercepts_line.rs  document_markers.rs  empty_lines_an_chomping.rs  fuzz.rs  indentation.rs  issues.rs  misplaced_flow_chars.rs  plain_scalar_indicators.rs  plain_tab.rs  readme.rs  reserved_directive.rs  span.rs  spec_test.rs  test_non_ascii.rs  test_non_ascii_comment_start.rs  test_parser_stack.rs  test_surrogates.rs  test_wide_non_ascii_position.rs  unclosed_flow.rs  yaml-test-suite.rs
parser/tools/: dump_events.rs  run_bench.rs  time_parse.rs
parser/tools/walk/: Cargo.toml
parser/tools/walk/src/: main.rs
saphyr/: CHANGELOG.md  Cargo.toml
saphyr/examples/: dump_yaml.rs
saphyr/src/: char_traits.rs  emitter.rs  encoding.rs  index.rs  lib.rs  loader.rs  scalar.rs  yaml.rs  yaml_owned.rs
saphyr/src/annotated/: marked_yaml.rs  marked_yaml_owned.rs  yaml_data.rs  yaml_data_owned.rs
saphyr/tests/: basic.rs  line_numbers.rs  quickcheck.rs  surrogates.rs
