[profile.release]
lto = true

[workspace]
members = [
    "saphyr",
    "bench",
    "bench/tools/gen_large_yaml",
    "bench/tools/bench_compare",
    "fuzz",
]
resolver = "2"

[workspace.package]
authors = [
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>",
  "Yuheng Chen <yuhengchen@sensetime.com>"
]
version = "0.0.6"
documentation = "https://docs.rs/saphyr"
keywords = [ "yaml", "parser" ]
categories = [ "encoding", "parser-implementations" ]
license = "MIT OR Apache-2.0"
description = "A fully YAML 1.2 compliant YAML library"
repository = "https://github.com/saphyr-rs/saphyr"
readme = "README.md"
edition = "2021"
rust-version = "1.95.0" # parser implements core::error::Error in no_std

[workspace.dependencies]
arraydeque = { version = "0.5.1", default-features = false }
encoding_rs = { version = "0.8.35" }
# Keep in sync with hashlink to reduce dependency duplication
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
hashlink = "0.11"
libtest-mimic = "0.8.2"
miette = { version = "7.6.0", features = ["fancy"] }
ordered-float = { version = "5.3", default-features = false }
quickcheck = "1.1"
rustyline = "18.0.0"
saphyr = { path = "saphyr" }
saphyr-bench = { path = "bench" }
thiserror = { version = ">= 2.0.15, <= 2.0.18", default-features = false }

[workspace.dependencies.saphyr-parser]
package = "granit-parser"
rev = "e10ee63e049c2fff7390d5640c690e95c8d216a1"
git = "https://github.com/bourumir-wyngs/granit-parser"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
perf = { level = "deny", priority = 1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

too_many_lines = "allow"
manual_let_else = "allow"
cast_possible_truncation = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
doc_link_code = "allow"

