[package]
name = "saphyr-parser-bw"
readme = "README.md"
authors = [
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>",
  "Yuheng Chen <yuhengchen@sensetime.com>",
  "Bourumir Wyngs <bourumir-wyngs@gmail.com>"
]
categories = { workspace = true }
description = "Saphyr-parser with changes from Bourumir Wyngs to be used in serde-saphyr"
documentation = "https://docs.rs/saphyr-parser/0.0.6/saphyr_parser/"
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = "https://github.com/bourumir-wyngs/saphyr"

# !!!important!!! branch = "dev/saphyr-parser", subdir = "parser". Master branch is just in sync with "https://github.com/saphyr-rs/saphyr"
rust-version = { workspace = true }
version = { workspace = true }
exclude = [
  # Exclude the `yaml-test-suite` from the package. This removes the need to
  # add its license to the package.
  "/tests/yaml-test-suite",
  # We don't need the documents either.
  "/documents",
]

[features]
debug_prints = []

[dependencies]
arraydeque = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
libtest-mimic = { workspace = true }
miette = { workspace = true }
quickcheck = { workspace = true }
rustyline = { workspace = true }
saphyr = { workspace = true }

[[test]]
name = "yaml-test-suite"
harness = false

[[bin]]
name = "dump_events"
path = "tools/dump_events.rs"

[[bin]]
name = "time_parser"
path = "tools/time_parse.rs"

[[bin]]
name = "run_parser"
path = "tools/run_bench.rs"
