[package]
name = "bench_compare"
version = "0.6.0"
authors = [
  "Ethiraric <ethiraric@gmail.com>"
]
license = "MIT OR Apache-2.0"
description = "Run multiple YAML parsers and compare their times"
repository = "https://github.com/Ethiraric/yaml-rust2"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.9.12"

[lints]
workspace = true
